--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
           <li>
             <a href="Pertemuan9/index.html">Pertemuan 9 - Bootstrap</a>
           </li>
+          <li>
+            <a href="Pertemuan10/index.html">Pertemuan 10 - Javascript</a>
+          </li>
         </ul>
       </aside>
     </main>
