--- a/Pertemuan10/jsjd.html
+++ b/Pertemuan10/jsjd.html
@@ -12,17 +12,38 @@
         document.write("Batal, untuk confirm batal");
       }
     </script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous" />
   </head>
   <body>
     <h3>Javascript</h3>
-    <ol>
-      <li><a href="jsvtd.html">Variabel dan type data</a></li>
-      <li><a href="jsop.html">Operator</a></li>
-      <li><a href="jso.html">Output Javascript</a></li>
-      <li>Jendela Dialog</li>
+    <ol class="nav flex-column">
+      <li class="nav-item">
+        <a class="nav-link" href="jsvtd.html">Variabel dan type data</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="jsop.html">Operator</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="jso.html">Output Javascript</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="jsjd.html"
+          >Jendela Dialog</a
+        >
+      </li>
     </ol>
-    <button onclick="window.alert('jendela alert')">Jendela Alert</button>
+    <button class="btn btn-primary" onclick="window.alert('jendela alert')">
+      Jendela Alert
+    </button>
     <br />
-    <a href="../index.html">Kembali</a>
+    <a href="index.html">Kembali</a>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"></script>
   </body>
 </html>
