--- a/Pertemuan10/jsop.html
+++ b/Pertemuan10/jsop.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PBW1 - Pertemuan 10</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous" />
     <script>
       var a = 15;
       var b = 4;
@@ -12,44 +17,58 @@
       var e = 2;
       document.write("Operator Aritmatika <br>");
       c = a + b;
-      document.write(a + "+" + b + "=" + c + "<br>");
+      document.write(a + " + " + b + " = " + c + "<br>");
       c = a - b;
-      document.write(a + "-" + b + "=" + c + "<br>");
+      document.write(a + " - " + b + " = " + c + "<br>");
       c = a * b;
-      document.write(a + "*" + b + "=" + c + "<br>");
+      document.write(a + " * " + b + " = " + c + "<br>");
       c = a ** b;
-      document.write(a + "**" + b + "=" + c + "<br>");
+      document.write(a + " ** " + b + " = " + c + "<br>");
       c = a / b;
-      document.write(a + "/" + b + "=" + c + "<br>");
+      document.write(a + " / " + b + " = " + c + "<br>");
       c = a % b;
-      document.write(a + "%" + b + "=" + c + "<br>");
+      document.write(a + " % " + b + " = " + c + "<br>");
       c = d + e;
-      document.write(d + "+" + e + "=" + c + "<br>");
+      document.write(d + " + " + e + " = " + c + "<br>");
       document.write("Operator Assignment(Penugasan) <br>");
       document.write("Nilai Awal" + a + "<br>");
       a += 5;
-      document.write("Nilai a menjadi" + a + "<br>");
+      document.write("Nilai a menjadi " + a + "<br>");
       a -= 2;
-      document.write("Nilai a menjadi" + a + "<br>");
+      document.write("Nilai a menjadi " + a + "<br>");
       a *= 2;
-      document.write("Nilai a menjadi" + a + "<br>");
+      document.write("Nilai a menjadi " + a + "<br>");
       a /= 4;
-      document.write("Nilai a menjadi" + a + "<br>");
+      document.write("Nilai a menjadi " + a + "<br>");
       a **= 2;
-      document.write("Nilai a menjadi" + a + "<br>");
+      document.write("Nilai a menjadi " + a + "<br>");
       a %= 3;
-      document.write("Nilai a menjadi" + a + "<br>");
+      document.write("Nilai a menjadi " + a + "<br>");
     </script>
   </head>
   <body>
     <h3>Javascript</h3>
-    <ol>
-      <li><a href="jsvtd.html">Variabel dan type data</a></li>
-      <li>Operator</li>
-      <li><a href="jso.html">Output Javascript</a></li>
-      <li><a href="jsjd.html">Jendela Dialog</a></li>
+    <ol class="nav flex-column">
+      <li class="nav-item">
+        <a class="nav-link" href="jsvtd.html">Variabel dan type data</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="jsop.html"
+          >Operator</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="jso.html">Output Javascript</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="jsjd.html">Jendela Dialog</a>
+      </li>
     </ol>
     <br />
-    <a href="../index.html">Kembali</a>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"></script>
+    <a href="index.html">Kembali</a>
   </body>
 </html>
