--- a/Pertemuan10/jsvtd.html
+++ b/Pertemuan10/jsvtd.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PBW1 - Pertemuan 10</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous" />
     <script>
       var siteName = "IWIMA";
       var url = "https://www.iwima.ac.id";
@@ -17,13 +22,27 @@
   </head>
   <body>
     <h3>Javascript</h3>
-    <ol>
-      <li>Variabel dan type data</li>
-      <li><a href="jsop.html">Operator</a></li>
-      <li><a href="jso.html">Output Javascript</a></li>
-      <li><a href="jsjd.html">Jendela Dialog</a></li>
+    <ol class="nav flex-column">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="jsvtd.html"
+          >Variabel dan type data</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="jsop.html">Operator</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="jso.html">Output Javascript</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="jsjd.html">Jendela Dialog</a>
+      </li>
     </ol>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"></script>
     <br />
-    <a href="../index.html">Kembali</a>
+    <a href="index.html">Kembali</a>
   </body>
 </html>
