--- a/index.html
+++ b/index.html
@@ -171,6 +171,17 @@
           <li>
             <a href="Pertemuan10/index.html">Pertemuan 10 - Javascript</a>
           </li>
+          <li>
+            <a href="tugasJs/index.html">Pertemuan 11 (daring)</a>
+          </li>
+          <li>
+            <a href="pertemuan12/pbw1-p12/">Pertemuan 12 - React JS</a>
+          </li>
+          <li>
+            <a href="pertemuan13/pbw1-p13/"
+              >Pertemuan 13 - Bootstrap React JS</a
+            >
+          </li>
         </ul>
       </aside>
     </main>
