--- a/san.html
+++ b/san.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ini Latihan Isan</title>
+    <title>Any</title>
+    <style>
+      * {
+        min-height: 100dvh;
+        background-color: #4682b4;
+      }
+    </style>
   </head>
-  <body>
-    <header></header>
-    <main>
-      <aside></aside>
-    </main>
-    <footer></footer>
-  </body>
+  <body></body>
 </html>
