--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
             <a href="tugasJs/index.html">Pertemuan 11 (daring)</a>
           </li>
           <li>
-            <a href="pertemuan12/pbw1-p12/">Pertemuan 12 - React JS</a>
+            <a href="Pertemuan12/pbw1-p12/">Pertemuan 12 - React JS</a>
           </li>
           <li>
-            <a href="pertemuan13/pbw1-p13/"
+            <a href="Pertemuan13/pbw1-p13/public/index.htmls"
               >Pertemuan 13 - Bootstrap React JS</a
             >
           </li>
