--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="Respon1_0028/index.html">Respon 1</a></li>
+            <li><a href="respon2_0028/respon2/">Respon 2</a></li>
             <li><a href="tugas4/index.html">Tugas 4</a></li>
           </ul>
         </nav>
